--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello Coursera</title>
+    <meta charset="utf-8">
+    <title>Coursera</title>
 </head>
 <body>
-    <h1>Hello Coursera. Trial. More Trial.</h1>
+    <p>I think I've seen this film before</p>
 </body>
 </html>
