--- a/site/lists.html
+++ b/site/lists.html
@@ -9,15 +9,15 @@
     <div>
         <ul>
 
-            <li><h2>Beyonce</h2></li>
+            <li><h2>Beyonce &copy;</h2></li>
             <ul>
-                <li>Drunk in Love</li>
+                <li>Drunk&nbsp;in&nbsp;Love</li>
                 <li>Partition</li>
                 <li>Haunted</li>
                 <li>Mine</li>
             </ul>
 
-            <li><h2>Lemonade</h2></li>
+            <li><h2>Lemonade &copy;</h2></li>
             <ul>
                 <li>Sorry</li>
                 <li>Formation</li>
@@ -30,7 +30,7 @@
     <h1>Ordered</h1>
     <div>
         <h2>I should do my German homework</h2>
-        <ol>
+        <ol start="0">
             <li>null</li>
             <li>eins</li>
             <li>zwei</li>
