--- a/site/sections.html
+++ b/site/sections.html
@@ -28,6 +28,6 @@
         <article>last chorus</article>
     </section>
 
-    <footer>Taylor's Version(c)</footer> 
+    <footer>Taylor's Version &copy;</footer> 
 </body>
 </html>
