--- a/site/cssdemo.html
+++ b/site/cssdemo.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <title>Images</title>
     <style>
+        .orange /*class*/
+        {
+            color: orange;
+            font-style: italic;
+        }
+        #orangered /*id*/
+        {
+            color: orangered;
+            font-weight: bold;
+        }
         p 
         {
-            color: black;
             font-size: 12;
             width: 400;
         }
@@ -23,7 +32,6 @@
         }
         img
         {
-            color: black;
             border: 1px solid;
         }
     </style>
@@ -38,7 +46,7 @@
                 They told me all of my cages were mental<br>
                 So I got wasted like all my potential<br>
                 And my words shoot to kill when I'm mad<br>
-                I have a lot of regrets about that<br>
+                <span id="orangered">I have a lot of regrets about that<br></span>
                 I was so ahead of the curve, the curve became a sphere<br>
                 Fell behind on my classmates, and I ended up here<br>
                 Pouring out my heart to a stranger<br>
@@ -56,7 +64,7 @@
                 You could call me babe for the weekend<br>
                 'Tis the damn season, write this down<br>
                 I'm stayin' at my parents' house<br>
-                And the road not taken looks real good now<br>
+                <span class="orange">And the road not taken looks real good now<br></span>
                 And it always leads to you in my hometown<br>
             </p>
         </article>
